# heimdall

./: .clang-format  .clang-tidy  .clang-tidy-light  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  COMPLETE_SBOM_IMPLEMENTATION_REPORT.md  COMPLETION_SUMMARY.md  CYCLONEDX_MULTI_VERSION_SUMMARY.md  Dockerfile  FINAL_COMPLETION_REPORT.md  LICENSE  README.md  SCHEMA_COVERAGE_ANALYSIS.md  SECURITY.md  SETUP-DEVCONTAINER.md  SUMMARY.md  TODO.md  add_license.sh  analyze_spdx_schemas.py  book.json  build.sh  clean  clean.sh  complete_cyclonedx_validation.py  components_debug.txt  comprehensive_cyclonedx_tests.py  create_perfect_test_data.py  create_spdx_validation_tests.py  cyclonedx_fix_summary.md  debug_library_detection.cpp  debug_normalize.cpp  debug_sbom_test.sh  debug_test  final.cdx  final_cyclonedx_test.py  heimdall_sonarqube_issues_20250728_202148.csv  package.json  plugin.md  (+44 more)
_book/cmake/: CMakeLists.txt
docs/: usage.md  (+33 more)
examples/: CMakeLists.txt  bom_ref_demo.cpp  profiling_example.cpp
examples/cmake_example/: CMakeLists.txt  README.md
examples/heimdall-ada-demo/: README.md  b~main.adb  b~main.ads  b~main.ali  data_reader.ali  main.ali  main_static  math_lib.adb  math_lib.ali  string_utils.ali  test_ada_extractor  test_ada_extractor.cpp  test_ali_content  test_ali_content.cpp  test_ali_integration  test_ali_integration.cpp  test_ali_usage  test_ali_usage.cpp  test_enhanced_ali_extraction  test_enhanced_ali_extraction.cpp  test_enhanced_implementation.cpp  test_enhanced_minimal.cpp  test_enhanced_simple.cpp  test_enhanced_standalone  test_enhanced_standalone.cpp  test_sbom_integration  test_sbom_integration.cpp
examples/heimdall-cmake-install-example/: CMakeLists.txt  install_greeter.cpp  install_greeter.h  main.cpp
examples/heimdall-cmake-installable-example/: CMakeLists.txt  installable_greeter.cpp  main.cpp
examples/heimdall-cmake-interface-example/: CMakeLists.txt  interface_greeter.cpp  interface_greeter.h  main.cpp
examples/heimdall-cmake-module-example/: CMakeLists.txt  main.cpp
examples/heimdall-cmake-sharedlib-example/: CMakeLists.txt  main.cpp  shared_greeter.cpp  shared_greeter.h
examples/heimdall-dwarf-rich-cyclonedx-example/: CMakeLists.txt  Project.cpp  Project.h  README.md  Task.cpp  Task.h  TaskManager.cpp  TaskManager.h  User.cpp  User.h  build_and_generate_sbom.sh  main.cpp  utils.cpp  utils.h
examples/heimdall-macho-enhanced-example/: CMakeLists.txt  README.md  main.cpp
examples/heimdall-spdx-validation-example/: CMakeLists.txt
examples/heimdall-usage-cyclonedx-example/: CMakeLists.txt  main.cpp  math.h  run_example.sh  utils.cpp
examples/heimdall-usage-example/: README.md  advanced_example.sh  main.cpp  math.h  run_example.sh  test_example.sh  utils.cpp
examples/heimdall-usage-spdx-example/: main.cpp  math.cpp  run_example.sh  utils.cpp  utils.h
examples/makefile_example/: README.md
examples/openssl_example/: README.md  build_c_example.sh  build_cpp_example.sh  generate_sbom_spdx  generate_sbom_spdx.c  main.c  main.cpp  openssl_c_example_gold  openssl_c_example_lld  openssl_cpp_example_gold  openssl_cpp_example_lld
examples/openssl_pthread_demo/: CMakeLists.txt  README.md  demo.sh  demo_comprehensive.sh  demo_simple.sh  generate_sbom_spdx.c  main.c  run_sbom_generator  run_sbom_generator.c
src/: CMakeLists.txt
src/common/: AdaExtractor.cpp  AdaExtractor.hpp  ComponentInfo.cpp  ComponentInfo.hpp  CycloneDXHandler.cpp  CycloneDXHandler.hpp  DWARFExtractor.cpp  DWARFExtractor.hpp  LazySymbolExtractor.cpp  LazySymbolExtractor.hpp  LightweightDWARFParser.cpp  LightweightDWARFParser.hpp  MetadataCache.hpp  MetadataExtractor.cpp  MetadataExtractor.hpp  MetadataHelpers.cpp  MetadataHelpers.hpp  ParallelProcessor.hpp  PerformanceMonitor.cpp  PerformanceMonitor.hpp  PluginInterface.cpp  PluginInterface.hpp  Profiler.cpp  Profiler.hpp  SBOMComparator.cpp  SBOMComparator.hpp  SBOMFormatFactory.cpp  SBOMFormats.hpp  SBOMGenerator.cpp  SBOMGenerator.hpp  SBOMSigner.cpp  SBOMSigner.hpp  SBOMValidator.cpp  SBOMValidator.hpp  SPDX2_3Handler.cpp  SPDX3_0_0Handler.cpp  SPDX3_0_1Handler.cpp  SPDXHandler.hpp  StringUtils.hpp  Utils.cpp  (+1 more)
src/compat/: compatibility.hpp
src/compiler/: CMakeLists.txt  HeimdallCompilerPlugin.cmake
src/detectors/: LicenseDetector.cpp  LicenseDetector.hpp  PackageManagerDetector.cpp  PackageManagerDetector.hpp  VersionDetector.cpp  VersionDetector.hpp
src/extractors/: AdaExtractor.cpp  AdaExtractor.hpp  ArchiveExtractor.cpp  ArchiveExtractor.hpp  DWARFExtractor.cpp  DWARFExtractor.hpp  ELFExtractor.cpp  ELFExtractor.hpp  LazySymbolExtractor.cpp  LazySymbolExtractor.hpp  LightweightDWARFParser.cpp  LightweightDWARFParser.hpp  MachOExtractor.cpp  MachOExtractor.hpp  PEExtractor.cpp  PEExtractor.hpp
src/factories/: BinaryFormatFactory.cpp  BinaryFormatFactory.hpp
src/gold/: EnhancedGoldAdapter.cpp  EnhancedGoldAdapter.hpp  GoldAdapter.cpp  GoldAdapter.hpp  GoldPlugin.cpp  GoldPlugin.hpp
src/interfaces/: IBinaryExtractor.hpp
src/lld/: LLDAdapter.cpp  LLDAdapter.hpp  LLDPlugin.cpp  LLDPlugin.hpp
tests/: CMakeLists.txt  README.md  coverage.sh  main.cpp  simple_coverage.sh  test_ada_extractor.cpp  test_binary_format_factory.cpp  test_compatibility.hpp  test_component_info.cpp  test_cyclonedx_all_versions_cpp.cpp  test_cyclonedx_enhanced_fields.cpp  test_dwarf_advanced.cpp  test_dwarf_cross_platform.cpp  test_dwarf_extractor.cpp  test_dwarf_integration.cpp  test_enhanced_macho.cpp  test_gold_plugin.cpp  test_integration_gold.cpp  test_integration_lld.cpp  test_lightweight_dwarf_parser.cpp  test_linux_support.cpp  test_lld_plugin.cpp  test_metadata_extractor.cpp  test_metadata_extractor_extended.cpp  test_package_manager_and_archive.cpp  test_plugin_interface.cpp  test_plugin_interface.hpp  test_plugin_sbom_consistency.cpp  test_recursive_directory_iterator.cpp  test_sbom_comparator.cpp  test_sbom_generator.cpp  test_sbom_refactoring.cpp  test_sbom_signer.cpp  test_sbom_signer_extended.cpp  test_sbom_validation.cpp  test_signature_integration.cpp  test_utils.cpp  test_utils.hpp  test_utils_extended.cpp
(+322 files in other folders)
